apps/nova/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nova
  namespace: nova
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nova
  template:
    metadata:
      labels:
        app: nova
    spec:
      containers:
        - name: web
          image: docker.io/spencerrung/nova:20260705233851-369ba13 # {"$imagepolicy": "flux-system:nova"}
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
