apps/nova/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nova
  namespace: nova
spec:
  type: ClusterIP
  selector:
    app: nova
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
